--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -56,8 +56,9 @@
                   tagboxLabel="Tags"></power-tagbox>
 
     <!-- modal buttons -->
-    <div class="modal-footer">
-        <label class="mr-auto text-muted"
+    <div class="modal-footer"
+         powerModalminiFooter>
+        <label class="text-muted"
                i18n>* Pflichtfeld</label>
         <button type="button"
                 class="btn btn-success"
