--- a/power/src/app/fragebogen/details/maketask/maketask.component.html
+++ b/power/src/app/fragebogen/details/maketask/maketask.component.html
@@ -37,7 +37,8 @@
     </div>
 
     <!-- modal buttons -->
-    <div class="modal-footer">
+    <div class="modal-footer"
+         powerModalminiFooter>
         <button type="button"
                 class="btn btn-success"
                 i18n-title
