--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -21,7 +21,7 @@
             <span class="ml-1"
                   aria-hidden="true"
                   i18n>Formulare</span>
-            <div class="float-right">
+            <div class="float-md-right">
                 <input class="form-control"
                        id="form-title-search"
                        type="text"
@@ -148,7 +148,7 @@
         </div>
         <div class="card-footer">
             <div class="float-right">
-                <div class="form-inline well">
+                <div class="form-inline">
                     <div class="form-group mx-2">
                         <select class="custom-select"
                                 aria-label="Formularanzahl pro Seite"
