--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -35,15 +35,42 @@
                      [collapse]="isCollapsed"
                      (expanded)="isExpanded = !isExpanded"
                      [isAnimated]="true">
-                    <div *ngIf="!adresse || adresse.properties.bundesland !== 'Niedersachsen'">
-                        <p class="text-center">Keine gültige Adresse! <br> Bitte wählen Sie eine gültige Adresse
-                            innerhalb
-                            von
-                            Niedersachsen aus.</p>
-                    </div>
                     <div class="well well-lg card card-block card-header verlauf">
                         <div class="row p-0"
                              *ngIf="features">
+                            <div *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen') && !features.features.length"
+                                 class="text-center border-top col-12">
+                                <p class="m-3 mx-center"
+                                   i18n>Keine gültige Adresse!</p>
+                                <br>
+                                <p class="m-3 mx-center"
+                                   i18n>Hinweis: </p>
+                                <p class="m-3 mx-center"
+                                   i18n>Bitte wählen Sie eine gültige Adresse innerhalb
+                                    von Niedersachsen aus.</p>
+                                <p class="m-3 mx-center"
+                                   i18n>Die Genauigkeit des Suchradius für die Adresse beträgt 50
+                                    Meter. </p>
+                            </div>
+                            <div *ngIf="adresse && adresse.properties.bundesland == 'Niedersachsen' && !features.features.length"
+                                 class="text-center border-top col-12">
+                                <p class="m-3 mx-center"
+                                   i18n>Es liegen keine Bodenrichtwertdaten für diese Adresse vor.</p>
+                            </div>
+                            <div *ngIf="!adresse && features.features.length"
+                                 class="text-center border-top col-12">
+                                <p class="m-3 mx-center"
+                                   i18n>Es liegen Bodenrichtwertdaten für diese Koordinate vor. </p>
+                                <p class="m-3 mx-center"
+                                   i18n>
+                                    Jedoch konnte keine Adresse für diesen Standort gefunden werden.
+                                </p>
+                                <p class="m-3 mx-center"
+                                   i18n>
+                                    Die Genauigkeit des Suchradius für die Adresse beträgt 50
+                                    Meter.
+                                </p>
+                            </div>
                             <power-bodenrichtwert-liste [stichtag]="stichtag"
                                                         [teilmarkt]="teilmarkt"
                                                         [features]="features">
