--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
@@ -58,6 +58,10 @@ mgl-map {
     color: #343a40;
 }
 
+.nav-link:hover {
+    cursor: pointer;
+}
+
 .text-white-50 {
     color: rgba(255, 255, 255, 0.5);
 }
