Added check if regex is invalid, added some tests

--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -69,7 +69,7 @@
                    class="form-control"
                    [(ngModel)]="item.regex"
                    (change)="modelChanged($event)"
-                   [class.is-invalid]="!item.regex"
+                   [class.is-invalid]="!item.regex || isRegExInvalid(item.regex)"
                    id="validatorData{{ i }}{{ uniqId }}"
                    name="validatorData{{ i }}{{ uniqId }}"
                    i18n-placeholder
