--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -155,7 +155,7 @@
                                 aria-description="Wählen Sie aus, wie viele Formulare pro Seite angezeigt werden sollen."
                                 i18n-aria-label
                                 i18n-aria-description
-                                (change)="perPage = Number($event.target.value); update(false)">
+                                (change)="perPage = $event.target.value; update(false)">
                             <option *ngFor=" let size of pageSizes">
                                 {{ size }}
                             </option>
