--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -31,7 +31,7 @@
 
     <!-- modal buttons -->
     <div class="modal-footer">
-        <button type="button" class="btn btn-success" i18n-title title="Formular veröffentlichen" (click)="Publish()">
+        <button type="button" class="btn btn-success" i18n-title title="Formular veröffentlichen" (click)="Publish(); modal.close();">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-globe2 align-baseline" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
                 <path fill-rule="evenodd"
