--- a/power/src/app/fragebogen/details/comment/comment.component.html
+++ b/power/src/app/fragebogen/details/comment/comment.component.html
@@ -2,13 +2,13 @@
     <div class="form-group row mb-0">
         <label for="comment" class="col-sm-4 col-form-label" i18n>Kommentar</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" maxlength="100" id="comment" name="comment" [(ngModel)]="comment">
+            <input type="text" class="form-control" maxlength="100" id="comment" name="comment" [(ngModel)]="description">
         </div>
     </div>
 
     <!-- modal buttons -->
     <div class="modal-footer">
-        <button type="button" class="btn btn-success" i18n-title title="Kommentar speichern" (click)="save()">
+        <button type="button" class="btn btn-success" i18n-title title="Kommentar speichern" (click)="out.emit({id: id, description: description}); modal.close();">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat-left-dots align-baseline"
                 fill="currentColor" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
                 <path fill-rule="evenodd"
