--- a/power/src/app/fragebogen/details/maketask/maketask.component.html
+++ b/power/src/app/fragebogen/details/maketask/maketask.component.html
@@ -1,35 +1,20 @@
 <power-modalmini #maketaskmodal>
     <!-- amount -->
     <div class="form-group row">
-        <label for="inputAmount"
-               class="col-sm-4 col-form-label"
-               i18n>Anzahl PINs</label>
+        <label for="inputAmount" class="col-sm-4 col-form-label" i18n>Anzahl PINs</label>
         <div class="col-sm-8">
-            <input type="number"
-                   class="form-control"
-                   min="1"
-                   max="100"
-                   id="inputAmount"
-                   name="inputAmount"
-                   [(ngModel)]="amount">
+            <input type="number" class="form-control" min="1" max="100" id="inputAmount" name="inputAmount" [(ngModel)]="amount">
         </div>
     </div>
 
     <!-- copy -->
     <div class="custom-control custom-checkbox">
-        <input type="checkbox"
-               class="custom-control-input"
-               [(ngModel)]="copy"
-               name="copy"
-               id="copy">
-        <label class="custom-control-label"
-               for="copy"
-               i18n>Kopiere PIN(s) in die Zwischenablage</label>
+        <input type="checkbox" class="custom-control-input" [(ngModel)]="copy" name="copy" id="copy">
+        <label class="custom-control-label" for="copy" i18n>Kopiere PIN(s) in die Zwischenablage</label>
     </div>
 
     <!-- results -->
-    <div class="scrolllist mt-2"
-         *ngIf="pinList.length !== 0">
+    <div class="scrolllist mt-2" *ngIf="pinList.length !== 0">
         <span *ngFor="let pin of pinList; index as i">
             <code>{{ pin }}</code>
             <br>
@@ -38,11 +23,7 @@
 
     <!-- modal buttons -->
     <div class="modal-footer">
-        <button type="button"
-                class="btn btn-success"
-                i18n-title
-                title="PINs erstellen"
-                (click)="Generate()">
+        <button type="button" class="btn btn-success" i18n-title title="PINs erstellen" (click)="this.out.emit({amount: amount, copy: copy}); modal.close()">
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
