--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -2,8 +2,7 @@
 <main class="mainpage p-1 p-lg-3" id="content">
     <section class="card bg-light" *ngIf="data">
         <div class="card-header h5">
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline"
-                fill="currentColor" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
                 <path
                     d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z" />
                 <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z" />
@@ -12,9 +11,7 @@
             </svg>
             <span class="ml-1" aria-hidden="true" i18n>Formulare</span>
             <div class="float-right">
-                <input class="form-control" id="form-title-search" type="text" role="search" placeholder="Titel"
-                    aria-description="Suchen Sie hier nach einem Formular-Titel." i18n-placeholder i18n-aria-description
-                    (change)="title = $event.target.value; update(false)">
+                <input class="form-control" id="form-title-search" type="text" role="search" placeholder="Titel" aria-description="Suchen Sie hier nach einem Formular-Titel." i18n-placeholder i18n-aria-description (change)="title = $event.target.value; update(false)">
             </div>
         </div>
         <div class="card-body table-responsive p-0">
@@ -23,10 +20,7 @@
                 <thead>
                     <tr>
                         <th scope="col" (click)="changeSort('title')" class="border-top-0 w-50">
-                            <span role="button" tabindex="0" (keydown.enter)="changeSort('title')"
-                                aria-roledescription="Auf- und absteigende Sortierung möglich."
-                                aria-describedby="ascSortedTitle descSortedTitle noForms" i18n
-                                i18n-aria-roledescription>Titel
+                            <span role="button" tabindex="0" (keydown.enter)="changeSort('title')" aria-roledescription="Auf- und absteigende Sortierung möglich." aria-describedby="ascSortedTitle descSortedTitle noForms" i18n i18n-aria-roledescription>Titel
                             </span>
                             <span *ngIf="sort && sort === 'title'">
                                 <span *ngIf="order === 'asc'" id="ascSortedTitle" aria-label="Aufsteigend sortiert."
@@ -38,7 +32,7 @@
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
                                     </svg>
                                 </span>
-                                <span *ngIf="order === 'desc'" id="descSortedTitle" aria-label="Absteigend sortiert.">
+                            <span *ngIf="order === 'desc'" id="descSortedTitle" aria-label="Absteigend sortiert.">
                                     <svg width="1em" height="0.8em" viewBox="0 1.2 16 16" class="bi bi-arrow-down"
                                         fill="currentColor" xmlns="http://www.w3.org/2000/svg" focusable="false"
                                         aria-hidden="true">
@@ -49,10 +43,7 @@
                             </span>
                         </th>
                         <th scope="col" (click)="changeSort('tags')" class="border-top-0">
-                            <span role="button" tabindex="0" (keydown.enter)="changeSort('tags')"
-                                aria-roledescription="Auf- und absteigende Sortierung möglich."
-                                aria-describedby="ascSortedTags descSortedTags" i18n i18n-roledescription
-                                i18n-describedby>Tags</span>
+                            <span role="button" tabindex="0" (keydown.enter)="changeSort('tags')" aria-roledescription="Auf- und absteigende Sortierung möglich." aria-describedby="ascSortedTags descSortedTags" i18n i18n-roledescription i18n-describedby>Tags</span>
                             <span *ngIf="sort && sort === 'tags'">
                                 <span *ngIf="order === 'asc'" id="ascSortedTags" aria-label="Aufsteigend sortiert."
                                     i18n-aria-label>
@@ -63,8 +54,7 @@
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
                                     </svg>
                                 </span>
-                                <span *ngIf="order === 'desc'" id="descSortedTags" aria-label="Absteigend sortiert."
-                                    i18n-aria-label>
+                            <span *ngIf="order === 'desc'" id="descSortedTags" aria-label="Absteigend sortiert." i18n-aria-label>
                                     <svg width="1em" height="0.8em" viewBox="0 1.2 16 16" class="bi bi-arrow-down"
                                         fill="currentColor" xmlns="http://www.w3.org/2000/svg" focusable="false"
                                         aria-hidden="true">
@@ -79,10 +69,9 @@
                 <tbody aria-live="polite">
                     <tr *ngFor="let form of data; index as i">
                         <td>
-                            <a [routerLink]="['/forms/fillout/form', form.id]"
-                                [attr.aria-describedby]="i">{{ form.extra }}</a>
+                            <a [routerLink]="['/forms/fillout/form', form.id]" [attr.aria-describedby]="i">{{ form.extra }}</a>
                         </td>
-                        <td [id]="i">{{ form.tags.join(', ') }}</td>
+                        <td [id]="i"><span *ngIf="form.tags">{{ form.tags.join(', ') }}</span></td>
                     </tr>
                 </tbody>
             </table>
@@ -90,23 +79,17 @@
         </div>
         <div class="card-footer">
             <div class="float-right">
-                <div class="form-inline well">
+                <div class="form-inline well" *ngIf="total > perPage">
                     <div class="form-group mx-2">
-                        <select class="custom-select" aria-label="Formularanzahl pro Seite"
-                            aria-description="Wählen Sie aus, wie viele Formulare pro Seite angezeigt werden sollen."
-                            i18n-aria-label i18n-aria-description
-                            (change)="perPage = $event.target.value; update(false)">
+                        <select class="custom-select" aria-label="Formularanzahl pro Seite" aria-description="Wählen Sie aus, wie viele Formulare pro Seite angezeigt werden sollen." i18n-aria-label i18n-aria-description (change)="perPage = $event.target.value; update(false)">
                             <option *ngFor=" let size of pageSizes">
                                 {{ size }}
                             </option>
                         </select>
                     </div>
-                    <pagination [boundaryLinks]="true" [itemsPerPage]="perPage" [maxSize]="10" [totalItems]="total"
-                        (pageChanged)="page = $event.page; update(false)" previousText="&lsaquo;" nextText="&rsaquo;"
-                        firstText="&laquo;" lastText="&raquo;" role="navigation" aria-label="Pagination"
+                    <pagination [boundaryLinks]="true" [itemsPerPage]="perPage" [maxSize]="10" [totalItems]="total" (pageChanged)="page = $event.page; update(false)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;" role="navigation" aria-label="Pagination"
                         [attr.aria-description]="'Derzeit ist Seite ' + page +
-                                                    ' von ' + totalPages + ' Seiten ausgewählt.'" i18n-aria-label
-                        i18n-aria-description>
+                                                    ' von ' + totalPages + ' Seiten ausgewählt.'" i18n-aria-label i18n-aria-description>
                     </pagination>
                 </div>
             </div>
