fixed bug remove geolocation

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -22,13 +22,13 @@
                                     <img src="/assets/icons/trash.svg"
                                          width="25"
                                          height="25"
-                                         alt="Selektion löschen"
-                                         title="Selektion löschen"
+                                         alt="Selektion aufheben"
+                                         title="Selektion aufheben"
                                          i18n-alt
                                          i18n-title>
                                 </a>
                                 <a class="nav-link"
-                                   (click)="enableLocationTracking()">
+                                   (click)="toggleLocationTracking()">
                                     <img src="/assets/icons/geo.svg"
                                          width="25"
                                          height="25"
