change geolocation title

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -32,8 +32,8 @@
                                     <img src="/assets/icons/geo.svg"
                                          width="25"
                                          height="25"
-                                         alt="Ortung"
-                                         title="Ortung"
+                                         alt="Standort aktivieren/deaktivieren"
+                                         title="Standort aktivieren/deaktivieren"
                                          i18n-alt
                                          i18n-title>
                                 </a>
